<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".BurnInTestingView"
    android:paddingStart="20dp"
    android:paddingTop="20dp"
    android:paddingEnd="20dp"
    android:paddingBottom="20dp">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/interval_time" />

        <EditText
            android:id="@+id/interval_et"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:text="50"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ms" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/number_of_prints" />

        <EditText
            android:id="@+id/times_et"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:text="1000" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/times" />
    </LinearLayout>

    <ProgressBar
        android:id="@+id/progress"
        android:layout_width="match_parent"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/progress_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_width="0dp"
            android:textAlignment="textEnd"
            android:layout_weight="1"
            android:text="@string/sum"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/sum_tv"
            android:layout_width="wrap_content"
            android:textAlignment="textEnd"
            android:text="0"
            android:layout_height="wrap_content" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center">

        <Button
            android:id="@+id/cancel_btn"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:textSize="11sp"
            android:textColor="@color/white"
            android:text="@string/cancel" />

        <Button
            android:id="@+id/confirm_btn"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:textSize="11sp"
            android:text="@string/start"
            android:textColor="@color/white"
            android:backgroundTint="@color/colorRed"/>

        <Button
            android:id="@+id/pause_btn"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:textSize="11sp"
            android:text="@string/pause" />
    </LinearLayout>


</LinearLayout>