<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical"
    android:paddingStart="20dp"
    android:paddingTop="20dp"
    android:paddingEnd="20dp"
    android:paddingBottom="20dp"
    tools:context=".ChooseFontsView">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/select_fonts" />

        <Spinner
            android:id="@+id/select_sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/progress_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="end">

        <Button
            android:id="@+id/cancel_btn"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:text="@string/cancel"
            android:textColor="@color/white"
            android:textSize="11sp" />

        <Button
            android:id="@+id/confirm_btn"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:backgroundTint="@color/colorRed"
            android:text="@string/print"
            android:textColor="@color/white"
            android:textSize="11sp" />
    </LinearLayout>


</LinearLayout>